Updated to demonstrate speed changes problem to @malsup
Remaining problem with slideshow is that the speed varies in certain
sections. The speed variation repeats in the same place upon rerunning
the slideshow.

--- a/Slideshows/slideshows_JQuery/cycle2_carousel/slideshow_carousel_cycle2.css
+++ b/Slideshows/slideshows_JQuery/cycle2_carousel/slideshow_carousel_cycle2.css
@@ -6,9 +6,17 @@
 	width: 100%;
 	border: 0;
 	position: absolute;
-	top: 120px;
+	top: 0px;
 	min-height: 512px;
 }
+
+#banner-slideshow {
+	margin-top: 160px;
+}
+
+#banner-slideshow img { width: auto; padding-left: 8px; padding-right: 8px}
+
+/*div.slideshow img { width: auto; height: auto }*/
 
 .MyEvents {
 	opacity: 1;
